fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -97,44 +97,28 @@ section h2 {
 }
 
 /* Selleries */
-/* .carousel-wrapper {
-  display: flex;
-  align-items: center;
-  overflow-x: scroll;
-  position: relative;
-} */
-
-/* .carousel-btn {
-  display: flex;
-  position: absolute;
-  font-size: 1.6rem;
-  top: 50%;
-  transform: translateY(-50%);
-  background: #333;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  border-radius: 100%;
-  padding: 5px;
-  z-index: 10;
-  opacity: 0.9;
-} */
-
-/* .prev-btn {
-  left: 10px;
-}
-
-.next-btn {
-  right: 10px;
-} */
-
 .selleries-list {
   display: flex;
   gap: 2.4rem;
   margin: 0 auto;
   padding: 2rem 0;
   overflow-x: scroll;
-  /* scrollbar-width: thin; */
+  -webkit-overflow-scrolling: touch; /* Enables smooth scrolling on iOS/macOS */
+}
+
+/* For Webkit browsers (Chrome, Safari) */
+.selleries-list::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the horizontal scrollbar */
+}
+
+.selleries-list::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5); /* Scrollbar thumb color */
+  border-radius: 10px;
+}
+
+.selleries-list::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0); /* Track color */
 }
 
 .sellerie-item {
